--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@prismicio/client": "^7.12.0",
     "@prismicio/next": "^1.7.1",
     "@prismicio/react": "^2.9.1",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
+    "@types/three": "^0.170.0",
+    "clsx": "^2.1.1",
+    "gsap": "^3.12.5",
+    "next": "14.2.16",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.57",
@@ -25,6 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "r3f-perf": "^7.2.3",
     "slice-machine-ui": "^2.10.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
