--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "next": "14.2.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "three": "^0.170.0"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.57",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
