--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/three": "^0.170.0",
     "clsx": "^2.1.1",
     "gsap": "^3.12.5",
+    "lodash": "^4.17.21",
     "next": "14.2.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.57",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
